src/config/service/http/snapshots/roadster__config__service__http__middleware__deserialize_tests__middleware@case_3.snap
---
source: src/config/service/http/middleware.rs
expression: middleware
---
default-enable = false

[sensitive-request-headers]
priority = -1
header-names = [
    'authorization',
    'proxy-authorization',
    'cookie',
    'set-cookie',
]

[sensitive-response-headers]
priority = 0
header-names = [
    'authorization',
    'proxy-authorization',
    'cookie',
    'set-cookie',
]

[set-request-id]
priority = 1
header-name = 'request-id'

[propagate-request-id]
priority = 2
header-name = 'request-id'

[tracing]
priority = 3

[catch-panic]
priority = 4

[response-compression]
priority = 5

[request-decompression]
priority = 6

[timeout]
priority = 7
timeout = 10000

[size-limit]
priority = 8
limit = '5 MB'
