src/config/service/http/snapshots/roadster__config__service__http__middleware__deserialize_tests__middleware@case_4.snap
---
source: src/config/service/http/middleware.rs
expression: middleware
---
default-enable = true

[sensitive-request-headers]
priority = -10000
header-names = [
    'authorization',
    'proxy-authorization',
    'cookie',
    'set-cookie',
]

[sensitive-response-headers]
priority = 10000
header-names = [
    'authorization',
    'proxy-authorization',
    'cookie',
    'set-cookie',
]

[set-request-id]
priority = -9990
header-name = 'request-id'

[propagate-request-id]
priority = 9990
header-name = 'request-id'

[tracing]
priority = -9980

[catch-panic]
priority = 0

[response-compression]
priority = 0

[request-decompression]
priority = -9960

[timeout]
priority = 0
timeout = 10000

[size-limit]
priority = -9970
limit = '5 MB'

[foo]
enable = true
priority = 10
x = 'y'
